war/LangTest.css
/* ... */
.blockStyle {
    display: block;
}

.bold {
    font-weight: bold;
}

.alignJustify {
     align: justify;
 }

.bigLink {
    font-size: 1em;
    font-weight: bold;
    text-align: center;
    color: #668CD9;
}

.alignCenter {
    text-align: center;
}

.grayText {
    color: #d3d3d3;
}

.normalText {
    color: #333333;
}

.sendButtonBlue {
    background-color: #6192bb;
    color: #FFFFFF;
}

.formRow {
    border-bottom: 1px solid #FFFFFF;
}

.center {
    text-align: center;
}

.leftAlign {
    text-align: left;
}

.inlineStyle {
    display: inline-block;
}

.buttonMargin {
    margin-right: 3px;
}

.shareTitle {
    margin-right: 5px;
    padding-top: 6px;
}

.buttonMargin2 {
    margin-bottom: 10px;
}

.typewriter {
    font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
}

.url-input {
    margin-top: 10px;
}

.url-box {
    border: 1px solid #DDDDDD;
    padding-left: 10px;
    padding-right: 10px;
    background-color: #fafafa;
    margin-left: 5px;
    margin-bottom: 5px;
}

.lessPadding {
    padding-left: 3px;
    padding-right: 3px;
}

.addPadding{
    border-width: 0;
}

.tableCenter {
    margin-left:auto;
    margin-right:auto;
}

.sendButton {
  display: block;
  font-size: 16pt;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
  width: 400px;
}

.dialogVPanel {
  margin: 5px;
}

.serverResponseLabelError {
  color: red;
}

fieldset {
    margin: 5px 15px 0px 15px;
    border-style: none;
}

.leftFifteenPercentMargin {
    margin-left: 15%;
}

.leftFiveMargin {
    margin-left: 5px;
}

.leftTenMargin {
    margin-left: 10px;
}

.noMargin {
    margin: 0px;
}

fieldset > legend {
    font-size: 18px;
    font-weight: bold;
    color: #666666;
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
  margin: 15px 6px 6px;
}

#registerButton {
    margin: 15px 6px 6px;
}

.exercise {
  font-size: 12pt;
}

.exercise-highlighted {
  background-color: #668CD9;
  border: none;
}

.exerciseBackground {
    background-color: #ebebec;
    color: #262726;

/*    border: 1px solid #E3E3E3;
    border-radius: 4px 4px 4px 4px;*/
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
    margin-bottom: 0px;
    min-height: 20px;
}

#nextButton {  margin-left: 20px; }
.paddedHorizontalPanel .gwt-Button {
  padding-left: 20px;
}

.paddedHorizontalPanel {
  padding-left: 20px;
}

.currentExercisePanel {

}

.alignTop {
    vertical-align:top;
}

.ImageOverlay{
    border: none;
    background-color: red;
}

.Button{
    font-family: Arial Unicode MS, Arial, sans-serif;
}

.clickable {
  cursor                      :   pointer;
}

.gwt-Button {
    background: none repeat scroll 0 0 #DDDDDD;
    border: 1px solid #AAAAAA;
    color: #333333;
    margin-right: 5px;
    padding-left: 6px;
    padding-right: 6px;
}

.squareButton {
    background: none repeat scroll 0 0 #DDDDDD;
    border: 1px solid #AAAAAA;
    color: #333333;
    margin-right: 5px;
    padding-left: 6px;
    padding-right: 6px;
}

.Tooltip{
    background-color: lightyellow;
    padding: 3px;
    border: 1px solid black;
}

.TooltipPopup{
    border: none;
}

.RecordPopup{
    background-color: white;
}

.backgroundWhite {
     background-color: white;
 }

.Instruction {
    text-align: left;
}

.Instruction-title {
    color: #333333;
    font-size: 16px;
}

.Instruction-data  {
    color: #CC6600;
    font-size: 18px;
    font-weight: bold;
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    word-break: break-all;
    white-space: normal;
}

.blueColor {
    color: #6192bb;
}

.darkerBlueColor {
    color: #669dc6;
}

.grayColor {
    background-color: #d4d1cc;
}

.correct {
   color:green
}

.incorrect {
    color:red
}

.incorrectCard {
    background-color: #ffa07a;
}

.correctCard {
    background-color: #90ee90;
}

.urdufont {
    color: #CC6600;
    font-family: 'Nafees Naskh',Nafees,sans-serif;
    font-size: 24px;
}

.pashtofont {
    font-family: 'Pashto Kror Asiatype','HSPashto','HSTahoma',Arial,Helvetica,sans-serif;
    font-size: x-large;
}

.pashtofont td {
    font-family: 'Pashto Kror Asiatype','HSPashto','HSTahoma',Arial,Helvetica,sans-serif;
    font-size: x-large;
}

.xlargeFont {
    font-size: x-large;
}

.xlargeFont td {
    font-size: x-large;
}

.inlineStyle {
    display: inline-block;
}

/**
* From here down is part of a partial attempt to have more graceful recovery from encountering a flash blocker.
* This attempt wasn't completed though.
*/
/**
 * SoundManager 2 + useFlashBlock
 * ------------------------------
 * Flash positioning and flashblock / clicktoflash handling
 */

#sm2-container {
    /**
     * where the SM2 flash movie goes. by default, relative container.
     * set relative or absolute here, and don't touch it later or bad things will happen (see below comments.)
     */
    position: absolute;
    width: 1px;
    height: 1px;
    overflow: hidden;
    /* screw IE 6, just make it display nice */
    _overflow: hidden;
}

#sm2-container object,
#sm2-container embed {
    /**
     * the actual SWF movie bit.
     * important: The SWF needs to be able to be moved off-screen without display: or position: changes.
     * changing display: or position: or overflow: here or on parent can cause SWF reload or other weird issues after unblock
     * e.g., SM2 starts but strange errors, no whileplaying() etc.
     */
    width: 48px;
    height: 48px;
    /* some flash blockers may also respect this rule */
    max-width: 48px;
    max-height: 48px;
}

#sm2-container.swf_timedout {
    /* expand to show the timed-out SWF content */
    position: relative;
    width: 48px;
    height: 48px;
}
/* ... */

